--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-Rules:
-
-- Do not build in Hospitals, Police or Military
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Better Vanilla - Rules</title>
+  </head>
+  <body>
+    <b>Rules:</b>
+    <ul>
+      <li>Do not build in Military, Hospitals, Police Stations or Firestations</li>
+    </ul>
+  </body>
+</html>
