--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <b>Rules:</b>
     <ul>
       <li>Do not build in Military, Hospitals, Police Stations or Firestations</li>
+      <li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li>
+      <li>Kill on sight is allowed but please concider talking first</li>
     </ul>
   </body>
 </html>
