--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     </style>
   </head>
   <body>
-    <b>Rules:</b>
+    <h3>DayZ Server "Better Vanilla by Pixelkiller" Rules:</h3>
     <ul>
       <li>Do not build in Military, Hospitals, Police Stations or Firestations</li>
       <li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li>
       <li>Kill on sight is allowed but please concider talking first</li>
+      <li>Only english or german in chat</li>
     </ul>
   </body>
 </html>
