--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li>
       <li>Kill on sight is allowed but please concider talking first</li>
       <li>Only english or german in chat</li>
+      <li>Streamsniping is not allowed</li>
     </ul>
   </body>
 </html>
