--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </style>
   </head>
   <body>
-    <h3>DayZ Server "Better Vanilla by Pixelkiller" Rules:</h3>
+    <h3>DayZ Server "Pixelkiller Better Vanilla" Rules:</h3>
     <ul>
       <li>Do not build in Military, Hospitals, Police Stations or Firestations</li>
       <li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li>
       <li>Kill on sight is allowed but please concider talking first</li>
       <li>Only english or german in chat</li>
-      <li>Streamsniping is not allowed</li>
+      <li>Streamsniping is not allowed and if admins think you streamsniped, you'll be banned without warning.</li>
     </ul>
   </body>
 </html>
