--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>Kill on sight is allowed but please concider talking first</li>
       <li>Only english or german in chat</li>
       <li>Streamsniping is not allowed and if admins think you streamsniped, you'll be banned without warning.</li>
+      <li>Building on roads or placing items on them is strictly prohibited. Dead ends are okay</li>
     </ul>
   </body>
 </html>
