--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Better Vanilla - Rules</title>
     <style>
-      body { background-color: #23272A; color: #fff; }
+      body { background-color: #23272A; color: #fff; font-family: 'Arial', Verdana;}
     </style>
   </head>
   <body>
