--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -6,6 +6,7 @@
     <title>Better Vanilla - Rules</title>
     <style>
       body { background-color: #23272A; color: #fff; font-family: 'Arial', Verdana;}
+      tr, td {vertical-align: top;}
     </style>
   </head>
   <body>
