--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -27,7 +27,7 @@
 </td>
 <td style='width: 20%;'>&nbsp;</td>
 <td style='width: 40%;'>
-<h3>DayZ Server "Pixelkiller Better Vanilla" Regeln</h3>
+<h3>🇩🇪 DayZ Server "Pixelkiller Better Vanilla" Regeln</h3>
 German rules, soon</td>
 </tr>
 <tr>
