--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -129,6 +129,16 @@
 <td>&nbsp;</td>
   <td><li>Restart alle 4 Stunden für maximale Performance</li></td>
 </tr>
+  <tr>
+<td><li>Bigger stack sizes for different items</li></td>
+<td>&nbsp;</td>
+  <td><li>Größere Stapel für verschiedene Items</li></td>
+</tr>
+  <tr>
+<td><li>And much more...</li></td>
+<td>&nbsp;</td>
+  <td><li>Und viele weitere...</li></td>
+</tr>  
 </tbody>
 </table>
   </body>
