--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Vanilla - Rules</title>
+    <title>cmdflow.github.io</title>
     <style>
       body { background-color: #23272A; color: #fff; }
     </style>
