--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -105,6 +105,11 @@
   <td><li>Fahrräder mit Inventar</li></td>
 </tr>
 <tr>
+<td><li>Pixelkiller suppressor will fit on all guns and pistols</li></td>
+<td>&nbsp;</td>
+  <td><li>Der Pixelkiller Schalldämpfer passt auf alle Gewehre und Pistolen</li></td>
+</tr>  
+<tr>
 <td><li>Open inventory in vehicles</li></td>
 <td>&nbsp;</td>
   <td><li>Du kannst dein Inventar in Fahrzeugen öffnen</li></td>
@@ -123,6 +128,11 @@
 <td><li>Consume human meat without disease</li></td>
 <td>&nbsp;</td>
   <td><li>Menschenfleisch kann ohne Krankheiten gegessen werden</li></td>
+</tr>
+<tr>
+<td><li>Base walls and gates are stronger than in vanilla but raidable</li></td>
+<td>&nbsp;</td>
+  <td><li>Basewände und -tore sind stärger als in Vanilla, sind aber raidbar</li></td>
 </tr>
   <tr>
 <td><li>4 hours restart for best performance</li></td>
