--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -26,7 +26,7 @@
 <tr>
 <td><li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li></td>
 <td>&nbsp;</td>
-<td><li>Sei kein A****loch. Du darfst Basen raiden, nimmer aber nur das notwendige und zerstöre nicht alles.</li></td>
+<td><li>Sei kein A****loch. Du darfst Basen raiden, nimm aber nur das notwendige und zerstöre nicht alles.</li></td>
 </tr>
 <tr>
   <td><li>Kill on sight is allowed but please concider talking first if possible</li></td>
