--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -24,9 +24,9 @@
   <td><li>Baue keine Krankenhäuser, Militär-, Polizei- oder Feuerwehrstationen zu.</li></td>
 </tr>
 <tr>
-<td><li>You are allowed to raid, but don't be an a**hole. Take what you need but don't destroy everything on purpose for no reason</li></td>
+<td><li>You are allowed to raid bases to take some stuff. It's forbidden to destroy huge parts of the base or the whole base. Also it's forbidden to let the loot despawn to harm players.</li></td>
 <td>&nbsp;</td>
-<td><li>Sei kein A****loch. Du darfst Basen raiden, nimm aber nur das notwendige und zerstöre nicht alles.</li></td>
+<td><li>Du darfst Basen raiden um Loot zu bekommen. Verboten ist es die Basen in großen Teilen oder ganz zu zerstören oder den Loot daraus zu vernichten um Spielern zu schaden.</li></td>
 </tr>
 <tr>
   <td><li>Kill on sight is allowed but please concider talking first if possible</li></td>
