--- a/dayz_rules.html
+++ b/dayz_rules.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="utf-8">
@@ -108,6 +108,11 @@
 <td><li>Pixelkiller suppressor will fit on all guns and pistols</li></td>
 <td>&nbsp;</td>
   <td><li>Der Pixelkiller Schalldämpfer passt auf alle Gewehre und Pistolen</li></td>
+</tr>  
+  <tr>
+<td><li>You can gain feathers from chicken coops to craft bolts</li></td>
+<td>&nbsp;</td>
+  <td><li>Aus den Hühnerställen kannst du Federn gewinnen um Bolzen herzustellen</li></td>
 </tr>  
 <tr>
 <td><li>Open inventory in vehicles</li></td>
